Thu Sep 25 21:44:23 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * MPC/config/dcps_ts_defaults.mpb:
        * MPC/modules/IDL2JNIHelper.pm:
        * MPC/modules/TYPESUPPORTHelper.pm:

          FooTypeSupportImpl.java is actually generated by dcps_ts.pl, not by
          idl2jni.  Adjusted the various MPC parts to be aware of this.

        * bin/Process.pm:

          Fixed whitespace.

        * java/dds/dcps_java.mpc:
        * java/idl2jni/runtime/idl2jni_runtime.mpc:

          Added explicit dependencies ("<<") so that javah always runs after
          the javac invocation for the referenced class.

        * java/idl2jni/codegen/im_jni.cpp:

          Fixed warnings, added comments, fixed whitespace.

        * java/idl2jni/tests/simple/idl2jni_test_simple.mpc:

          Disabled this compile-only test.

        * java/tests/dcps_java_tests.lst:

          Fixed syntax (":" needed as a separator).

        * bin/JavaProcess.pm:

          New Perl module for running Java applications in tests.

        * java/tests/hello/run_test.pl:
        * java/tests/messenger/publisher/run_test.pl:
        * java/tests/messenger/subscriber/run_test.pl:

          These now use the JavaProcess module to start Java apps.

Thu Sep 25 21:27:47 UTC 2008  Steven Stallion  <stallions@ociweb.com>

        * java/build_scripts/generate_javadoc.pl:
        * java/docs/overview.html:

          Updated javadoc documentation.

Thu Sep 25 20:56:45 UTC 2008  Steven Stallion  <stallions@ociweb.com>

        * java/dds/DDS/package.html:
        * java/dds/OpenDDS/DCPS/package.html:
        * java/docs:
        * java/docs/overview.html:

          Added documentation.

        * java/dds/OpenDDS/DCPS/transport/package.html:
        * java/dds/OpenDDS/package.html:

          Removed these files.

Thu Sep 25 20:04:39 UTC 2008  Steven Stallion  <stallions@ociweb.com>

        * java/build_scripts/generate_javadoc.pl:
        * java/dds/DDS/package.html: