@@ -10,6 +10,11 @@ use Env(JAVA_HOME);
 
 use strict;
 
+my $dest = shift;
+if ($dest eq "") {
+    $dest = "$DDS_ROOT/java/docs/api";
+}
+
 my @args = (
     "$JAVA_HOME/bin/javadoc",
     "-overview", "$DDS_ROOT/java/docs/overview.html",
@@ -17,7 +22,7 @@ my @args = (
     "-source", "1.5",
     "-classpath", "$DDS_ROOT/lib/i2jrt.jar",
     "-sourcepath", "$DDS_ROOT/java/dds",
-    "-d", "$DDS_ROOT/java/docs/api",
+    "-d", "$dest",
     "-version",
     "-author",
     "-windowtitle", "OpenDDS_DCPS",
