@@ -25,7 +25,7 @@
     in St. Louis and Phoenix. It is released under the same generous license
     terms as ACE, TAO and MPC.</p>
     
-    <p>The OpenDDS project is located at
+    <p>The OpenDDS project can be found by visiting:
     <a href="http://www.opendds.org/">http://www.opendds.org/</a>.
     </p>
 
